Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview</label>
        <referenceTo>Interview__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Fit for role</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfect Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_out_of_10__c</fullName>
        <label>Rating out of 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feedback</label>
    <nameField>
        <displayFormat>Feedback-{000}</displayFormat>
        <label>Feedback No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>